--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,21 @@
         width: 40px;
     }
 
+    .navbar-light .navbar-toggler {
+        color: rgba(0, 0, 0, .5);
+        border-color: rgba(0, 0, 0, .1);
+        float: right;
+    }
+
     .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
         background-color: rgb(165, 0, 255);
+    }
+
+    @media (max-width: 992px) {
+        .navbar-expand-lg .navbar-nav .nav-link {
+            padding-right: .5rem;
+            padding-left: .5rem;
+        }
     }
 
     /* .custom-checkbox .custom-control-input.my-error~.custom-control-label::before {
